refactor:added correct batch flow